--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
-    "nodemon": "^2.0.22"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
+    "slugify": "^1.6.6"
   }
 }
