--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
     "slugify": "^1.6.6"
   }
